--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,14 @@ description = "Pruning LLMs"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "accelerate>=1.12.0",
     "datasets>=4.4.2",
     "flash-attn>=2.8.3",
     "liger-kernel>=0.6.4",
     "torch>=2.9.0",
     "transformers>=4.57.3",
     "vllm>=0.13.0",
+    "wandb>=0.23.1",
     "zstandard>=0.25.0",
 ]
 
